# ixy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/ixy-core/: Cargo.toml
crates/ixy-core/src/: block.rs  ids.rs  lib.rs  message.rs  provenance.rs  raw_ref.rs  taxonomy.rs  thread.rs
docs/design-v0.1.0/: design-doc.md  project-plan.md
docs/design-v0.1.0/arc01-discovery/: arc-plan.md  closing-report.md  corpus-map.md
docs/design-v0.1.0/arc01-discovery/slice01-code-jsonl/: cc-prompt.md  cdc-verification.md  closing-report.md  ledger.md  slice-doc.md
docs/design-v0.1.0/arc01-discovery/slice02-desktop-export/: cc-prompt.md  cdc-verification.md  closing-report.md  ledger.md  slice-doc.md
docs/design-v0.1.0/arc01-discovery/slice03-corpus-map/: closing-report.md  ledger.md  slice-doc.md
docs/design-v0.1.0/arc02-classification/: arc-plan.md
docs/design-v0.1.0/arc02-classification/slice01-record-model/: cc-prompt.md  cdc-verification.md  closing-report.md  ledger.md  slice-doc.md
